[project]
name = "semantic-latent-diffusion-t2i"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.0",
    "diffusers>=0.34.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "tensorboard>=2.20.0",
    "torch>=2.5.1",
    "torch-tb-profiler>=0.4.3",
    "torchvision>=0.20.1",
    "transformers>=4.55.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
